--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -6,7 +6,7 @@ textColor="#f1f2f5"
 font="monospace"
 
 [server]
-enableStaticServing = true
+enableStaticServing = false
 
 [client]
 showSidebarNavigation = false
