--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#08c3d9"
-backgroundColor="#081bd9"
+backgroundColor="#058efa"
 secondaryBackgroundColor="#0897d9"
 textColor="#ffffff"
 font="monospace"
