--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,7 +1,7 @@
 [theme]
-primaryColor="#08c3d9"
-backgroundColor="#058efa"
-secondaryBackgroundColor="#0897d9"
+primaryColor="#1282A2"
+backgroundColor="#034078"
+secondaryBackgroundColor="#001F54"
 textColor="#ffffff"
 font="monospace"
 
