--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -3,7 +3,7 @@ primaryColor="#1282A2"
 backgroundColor="#034078"
 secondaryBackgroundColor="#001F54"
 textColor="#ffffff"
-font="monospace"
+font="serif"
 
 [server]
 enableStaticServing = false
